--- a/A02_BAEKJOON/B01_Step/_11-20/C15_약수_배수_소수_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C15_약수_배수_소수_2.ipynb
@@ -326,9 +326,22 @@
    "execution_count": null,
    "id": "af156965",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# 8\t17103\t 골드바흐 파티션\n",
+    "\n",
     "sys.stdin = StringIO('''5\n",
     "6\n",
     "8\n",
@@ -337,19 +350,55 @@
     "100''')\n",
     "\n",
     "import sys\n",
+    "from math import isqrt\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "\n"
+    "max_value = 10**6\n",
+    "is_prime = [True]*(max_value + 1)\n",
+    "is_prime[0] = is_prime[1] = False\n",
+    "\n",
+    "for i in range(2, isqrt(max_value) + 1):\n",
+    "    if is_prime[i]:\n",
+    "        for div in range(i*i, max_value + 1, i):\n",
+    "            is_prime[div] = False\n",
+    "\n",
+    "primes = [i for i, val in enumerate(is_prime) if val]\n",
+    "\n",
+    "n = int(input())\n",
+    "for _ in range(n):\n",
+    "    num = int(input())\n",
+    "    count = 0\n",
+    "    for p in primes:\n",
+    "        if p > num // 2:\n",
+    "            break\n",
+    "        if is_prime[num - p]:\n",
+    "            count += 1\n",
+    "    print(count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "fbeea219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t13909\t 창문 닫기"
+    "# 9\t13909\t 창문 닫기\n",
+    "sys.stdin = StringIO('''24''')\n",
+    "\n",
+    "import sys\n",
+    "from math import isqrt\n",
+    "\n",
+    "n = int(sys.stdin.readline())\n",
+    "print(int(isqrt(n)))\n"
    ]
   }
  ],
