--- a/A02_BAEKJOON/B01_Step/_11-20/C16_스택2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C16_스택2.ipynb
@@ -349,10 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "3ffaf963",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 7\t2164\t 카드2\n",
     "sys.stdin = StringIO('''6''')\n",
@@ -361,37 +369,183 @@
     "from collections import deque\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "n = int(input())\n"
+    "n = int(input())\n",
+    "\n",
+    "dq = deque(range(1, n+1))\n",
+    "\n",
+    "while len(dq) > 1:\n",
+    "    dq.popleft()\n",
+    "    dq.append(dq.popleft())\n",
+    "\n",
+    "print(dq.pop())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "41ac3312",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<3, 6, 2, 7, 5, 1, 4>\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t11866\t 요세푸스 문제 0"
+    "# 8\t11866\t 요세푸스 문제 0\n",
+    "sys.stdin = StringIO('''7 3''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, k = map(int, input().split())\n",
+    "dq = deque(range(1, n + 1))\n",
+    "answer = list()\n",
+    "for _ in range(n):\n",
+    "    dq.rotate(-(k-1))\n",
+    "    answer.append(str(dq.popleft()))\n",
+    "print(f\"<{\", \".join(answer)}>\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "3f28b4f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "3\n",
+      "8\n",
+      "3\n",
+      "5\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t28279\t 덱 2"
+    "# 9\t28279\t 덱 2\n",
+    "\n",
+    "sys.stdin = StringIO('''11\n",
+    "6\n",
+    "1 3\n",
+    "1 8\n",
+    "7\n",
+    "8\n",
+    "3\n",
+    "2 5\n",
+    "1 2\n",
+    "5\n",
+    "4\n",
+    "4''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "dq = deque()\n",
+    "\n",
+    "switch = {\n",
+    "    1: lambda x: dq.appendleft(x),\n",
+    "    2: lambda x: dq.append(x),\n",
+    "    3: lambda: dq.popleft() if dq else -1,\n",
+    "    4: lambda: dq.pop() if dq else -1,\n",
+    "    5: lambda: len(dq),\n",
+    "    6: lambda: 0 if dq else 1,\n",
+    "    7: lambda: dq[0] if dq else -1,\n",
+    "    8: lambda: dq[-1] if dq else -1\n",
+    "}\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    c = input().split()\n",
+    "    func = switch.get(int(c[0]))\n",
+    "\n",
+    "    if len(c)==2:\n",
+    "        func(int(c[1]))\n",
+    "    else:\n",
+    "        print(func())\n",
+    "        \n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "5d966d93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 5 3 2\n",
+      "1 4 5 3 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10\t2346\t 풍선 터뜨리기"
+    "# 10\t2346\t 풍선 터뜨리기\n",
+    "sys.stdin = StringIO('''5\n",
+    "3 2 1 -3 -1''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "lst = input().split()\n",
+    "dq = deque((str(i + 1), int(lst[i])) for i in range(n) )\n",
+    "\n",
+    "answer = list()\n",
+    "while dq:\n",
+    "    idx, move = dq.popleft()\n",
+    "    answer.append(idx)\n",
+    "    if move > 0:\n",
+    "        dq.rotate(-(move-1))\n",
+    "    else:\n",
+    "        dq.rotate(-move)\n",
+    "print(\" \".join(answer))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#  list 기반\n",
+    "sys.stdin = StringIO('''5\n",
+    "3 2 1 -3 -1''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "n = int(input())\n",
+    "lst = input().split()\n",
+    "\n",
+    "answer = []\n",
+    "i = 0\n",
+    "while True:\n",
+    "    move = int(lst[i])\n",
+    "    answer.append(str(i+1))\n",
+    "    if len(answer) == n: break\n",
+    "    lst[i] = \"#\"\n",
+    "    if move > 0:\n",
+    "        while move > 0:\n",
+    "            i = (i+1)%n      \n",
+    "            if lst[i] != \"#\":\n",
+    "                move -= 1\n",
+    "    else :\n",
+    "        while move < 0:\n",
+    "            i = (i+(n-1))%n\n",
+    "            if lst[i] != \"#\":\n",
+    "                move += 1\n",
+    "print(\" \".join(answer))"
    ]
   },
   {
@@ -399,9 +553,42 @@
    "execution_count": null,
    "id": "9173b6ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 11\t24511\t queuestack"
+    "# 11\t24511\t queuestack\n",
+    "sys.stdin = StringIO('''4\n",
+    "0 1 1 0\n",
+    "1 2 3 4\n",
+    "3\n",
+    "2 4 7''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "que_stack = input().split()\n",
+    "start_elements = input().split()\n",
+    "\n",
+    "m = int(input())\n",
+    "elements = input().split()\n",
+    "\n",
+    "'''\n",
+    "stack 이면 통과\n",
+    "queue 면 바꾸고 이동\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n"
    ]
   }
  ],
