--- a/A02_BAEKJOON/B01_Step/_11-20/C16_스택2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C16_스택2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e5e175d8",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "4 1 2\n"
      ]
     }
    ],
@@ -571,24 +571,21 @@
     "2 4 7''')\n",
     "\n",
     "import sys\n",
-    "from collections import deque\n",
     "input = sys.stdin.readline\n",
     "\n",
     "n = int(input())\n",
     "\n",
     "que_stack = input().split()\n",
-    "start_elements = input().split()\n",
+    "start_ins = input().split()\n",
     "\n",
     "m = int(input())\n",
-    "elements = input().split()\n",
+    "appends = input().split()\n",
     "\n",
-    "'''\n",
-    "stack 이면 통과\n",
-    "queue 면 바꾸고 이동\n",
+    "result = [start_ins[i] for i in range(n) if que_stack[i] == '0']\n",
     "\n",
-    "'''\n",
-    "\n",
-    "\n"
+    "result.reverse()\n",
+    "result.extend(appends)\n",
+    "print(\" \".join(result[:m]))"
    ]
   }
  ],
