--- a/A02_BAEKJOON/B01_Step/_11-20/C18_심화_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C18_심화_2.ipynb
@@ -89,31 +89,142 @@
    "execution_count": null,
    "id": "387b2310",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# 3\t26069\t 붙임성 좋은 총총이\n",
+    "sys.stdin = StringIO('''12\n",
+    "bnb2011 chansol\n",
+    "chansol chogahui05\n",
+    "chogahui05 jthis\n",
+    "jthis ChongChong\n",
+    "jthis jyheo98\n",
+    "jyheo98 lms0806\n",
+    "lms0806 pichulia\n",
+    "pichulia pjshwa\n",
+    "pjshwa r4pidstart\n",
+    "r4pidstart swoon\n",
+    "swoon tony9402\n",
+    "tony9402 bnb2011''')\n",
     "\n",
-    "\n"
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "dances = {'ChongChong'}\n",
+    "for _ in range(n):\n",
+    "    a, b = input().split()\n",
+    "    if a in dances or b in dances:\n",
+    "        dances.add(a)\n",
+    "        dances.add(b)\n",
+    "print(len(dances))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "id": "261e3982",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t2108\t 통계학"
+    "# 4\t2108\t 통계학\n",
+    "sys.stdin = StringIO('''3\n",
+    "0\n",
+    "0\n",
+    "-1''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import Counter\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "nums = [int(input()) for _ in range(n)]\n",
+    "nums.sort()\n",
+    "\n",
+    "\n",
+    "counts = Counter(nums)\n",
+    "max_value = max(counts.values())\n",
+    "values = [k for k, v in counts.items() if v == max_value]\n",
+    "values.sort()\n",
+    "\n",
+    "print(round(sum(nums)/n))\n",
+    "print(nums[n//2])\n",
+    "print(values[0] if len(values) == 1 else values[1])\n",
+    "print(nums[-1] - nums[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "id": "e88f4f26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "swift\n",
+      "mouse\n",
+      "appearance\n",
+      "attendance\n",
+      "append\n",
+      "wallet\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t20920\t 영단어 암기는 괴로워"
+    "# 5\t20920\t 영단어 암기는 괴로워\n",
+    "sys.stdin = StringIO('''12 5\n",
+    "appearance\n",
+    "append\n",
+    "attendance\n",
+    "swim\n",
+    "swift\n",
+    "swift\n",
+    "swift\n",
+    "mouse\n",
+    "wallet\n",
+    "mouse\n",
+    "ice\n",
+    "age''')\n",
+    "\n",
+    "import sys\n",
+    "from collections import Counter\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, ignore = map(int, input().split())\n",
+    "\n",
+    "c = Counter()\n",
+    "for _ in range(n):\n",
+    "    word = input().rstrip()\n",
+    "    if len(word) >= ignore:\n",
+    "        c[word] += 1\n",
+    "\n",
+    "lst = sorted(c.items(), key=lambda x: (-x[1], -len(x[0]), x[0]))\n",
+    "\n",
+    "for w, _ in lst:\n",
+    "    print(w)\n",
+    "\n"
    ]
   }
  ],
