--- a/A02_BAEKJOON/B01_Step/_11-20/C19_재귀.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C19_재귀.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "330e2464",
    "metadata": {},
    "outputs": [],
@@ -128,45 +128,428 @@
    "execution_count": null,
    "id": "f91de8ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t24060\t 알고리즘 수업 - 병합 정렬 1"
+    "# 4\t24060\t 알고리즘 수업 - 병합 정렬 1\n",
+    "sys.stdin = StringIO('''5 7\n",
+    "4 5 1 3 2''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, k = map(int, input().split())\n",
+    "nums = list(map(int, input().split()))\n",
+    "\n",
+    "cnt = 0\n",
+    "\n",
+    "class Found(Exception):\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "def merge_sort(input_lst, start, end):\n",
+    "    if start < end:\n",
+    "        middle = (end + start)//2\n",
+    "        merge_sort(input_lst, start, middle)\n",
+    "        merge_sort(input_lst, middle + 1, end)\n",
+    "        merge(input_lst, start, middle, end)\n",
+    "\n",
+    "def merge(origin, start, middle, end):\n",
+    "    global cnt\n",
+    "\n",
+    "    i, j = start, middle + 1\n",
+    "    temp = list()\n",
+    "    while i <= middle and j <= end:\n",
+    "        if origin[i] <= origin[j]:\n",
+    "            temp.append(origin[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            temp.append(origin[j])\n",
+    "            j += 1\n",
+    "    if i <= middle:\n",
+    "        temp.extend(origin[i: middle+1])\n",
+    "    if j <= end:\n",
+    "        temp.extend(origin[j: end+1])\n",
+    "\n",
+    "    t_idx = 0\n",
+    "    for idx in range(start, end + 1):\n",
+    "        origin[idx] = temp[t_idx]\n",
+    "        cnt += 1\n",
+    "        if cnt == k:\n",
+    "            raise Found(temp[t_idx])\n",
+    "        t_idx += 1\n",
+    "\n",
+    "try:\n",
+    "    merge_sort(nums, 0, len(nums)-1)\n",
+    "    print(-1)\n",
+    "except Found as f:\n",
+    "    print(f.value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "af0c7bd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-\n",
+      "- -\n",
+      "- -   - -         - -   - -\n",
+      "- -   - -         - -   - -                           - -   - -         - -   - -\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t4779\t 칸토어 집합"
+    "# 5\t4779\t 칸토어 집합\n",
+    "sys.stdin = StringIO('''0\n",
+    "1\n",
+    "3\n",
+    "4''')\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def mark_blank(array, start, end):\n",
+    "    if start == end: return\n",
+    "    term = (end - start + 1) // 3\n",
+    "    blank_start = start + term\n",
+    "    blank_end = start + 2*term\n",
+    "    array[blank_start:blank_end] = [False]*term\n",
+    "\n",
+    "    mark_blank(array, start, blank_start-1)\n",
+    "    mark_blank(array, blank_end, end)\n",
+    "\n",
+    "while True:\n",
+    "    n = input().rstrip()\n",
+    "    if not n : break\n",
+    "    n = int(n)\n",
+    "    result = [True]* 3**n\n",
+    "    mark_blank(result, 0, len(result) -1)\n",
+    "    answer = ['-' if i else ' ' for i in result ]\n",
+    "    print(\"\".join(answer))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "81d39dfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***   ***         ***   ***\n",
+      "* *   * *         * *   * *\n",
+      "***   ***         ***   ***\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t2447\t 별 찍기 - 10"
+    "# 6\t2447\t 별 찍기 - 10\n",
+    "\n",
+    "sys.stdin = StringIO('''27''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def return3point(start, end):\n",
+    "    term = (end - start + 1) // 3\n",
+    "    middle_start = start + term\n",
+    "    middle_end = start + 2*term\n",
+    "    return (start, middle_start), (middle_start, middle_end), (middle_end, end+1) \n",
+    "\n",
+    "def fill_star(n):\n",
+    "    if n == 1:\n",
+    "        return ['*']\n",
+    "\n",
+    "    sub_leg = n//3 \n",
+    "    sub_array = fill_star(sub_leg)\n",
+    "\n",
+    "    array = [[\" \"] * n for _ in range(n)]\n",
+    "    points = return3point(0, n - 1)\n",
+    "    for i , (col_start, col_end) in enumerate(points):\n",
+    "        for j, (row_start, row_end) in enumerate(points):\n",
+    "            if i==j==1: \n",
+    "                continue\n",
+    "            for col in range(col_start, col_end):\n",
+    "                for row in range(row_start, row_end):\n",
+    "                    array[col][row] = sub_array[col%sub_leg][row%sub_leg]\n",
+    "    return array\n",
+    "\n",
+    "n = int(input())\n",
+    "for row in fill_star(n):\n",
+    "    print(\"\".join(row))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
+   "id": "7c3d92c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*********\n",
+      "* ** ** *\n",
+      "*********\n",
+      "***   ***\n",
+      "* *   * *\n",
+      "***   ***\n",
+      "*********\n",
+      "* ** ** *\n",
+      "*********\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t2447\t 별 찍기 - 10\n",
+    "\n",
+    "sys.stdin = StringIO('''9''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def fill_star(n):\n",
+    "    # 항상 2D 배열을 반환하도록 통일\n",
+    "    if n == 1:\n",
+    "        return [['*']]\n",
+    "\n",
+    "    sub_n = n // 3\n",
+    "    sub = fill_star(sub_n)                  # sub_n x sub_n 패턴\n",
+    "    arr = [[' '] * n for _ in range(n)]     # 전체 n x n 배열\n",
+    "\n",
+    "    # 3x3 블록 순회\n",
+    "    for bi in range(3):         # block row index (0,1,2)\n",
+    "        for bj in range(3):     # block col index (0,1,2)\n",
+    "            # 가운데 블록은 비워둠\n",
+    "            if bi == 1 and bj == 1:\n",
+    "                continue\n",
+    "\n",
+    "            start_r = bi * sub_n\n",
+    "            start_c = bj * sub_n\n",
+    "\n",
+    "            # sub 패턴을 해당 블록 위치에 복사\n",
+    "            for i in range(sub_n):\n",
+    "                for j in range(sub_n):\n",
+    "                    arr[start_r + i][start_c + j] = sub[i][j]\n",
+    "\n",
+    "    return arr\n",
+    "\n",
+    "n = int(input())\n",
+    "board = fill_star(n)\n",
+    "for row in board:\n",
+    "    print(\"\".join(row))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "afe92889",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***   ***         ***   ***\n",
+      "* *   * *         * *   * *\n",
+      "***   ***         ***   ***\n",
+      "*********         *********\n",
+      "* ** ** *         * ** ** *\n",
+      "*********         *********\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n",
+      "***   ******   ******   ***\n",
+      "* *   * ** *   * ** *   * *\n",
+      "***   ******   ******   ***\n",
+      "***************************\n",
+      "* ** ** ** ** ** ** ** ** *\n",
+      "***************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t2447\t 별 찍기 - 10\n",
+    "\n",
+    "sys.stdin = StringIO('''27''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve(n):\n",
+    "    if n == 1:\n",
+    "        return [\"*\"]\n",
+    "    \n",
+    "    sub = solve(n//3)\n",
+    "    lines = list()\n",
+    "\n",
+    "    for s in sub:\n",
+    "        lines.append(s * 3)\n",
+    "    \n",
+    "    space = \" \" * (n//3)\n",
+    "    for s in sub:\n",
+    "        lines.append(s + space + s)\n",
+    "    \n",
+    "    for s in sub:\n",
+    "        lines.append(s * 3)\n",
+    "\n",
+    "    return lines\n",
+    "\n",
+    "n = int(input())\n",
+    "print(\"\\n\".join(solve(n)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "id": "17e1a26f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 3\n",
+      "1 2\n",
+      "3 2\n",
+      "1 3\n",
+      "2 1\n",
+      "2 3\n",
+      "1 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t11729\t 하노이 탑 이동 순서"
+    "# 7\t11729\t 하노이 탑 이동 순서\n",
+    "\n",
+    "sys.stdin = StringIO('''3''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "num = int(input())\n",
+    "\n",
+    "def solution(n, start, middle, end):\n",
+    "    if n == 0:\n",
+    "        return []\n",
+    "\n",
+    "    answer = []\n",
+    "    befor_sub_sol = solution(n-1, start, end, middle)\n",
+    "    answer.extend(befor_sub_sol)\n",
+    "\n",
+    "    answer.append((start, end))\n",
+    "\n",
+    "    after_sub_sol = solution(n-1, middle, start, end)\n",
+    "    answer.extend(after_sub_sol)\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "moves = solution(num, 1, 2, 3)\n",
+    "print(len(moves))\n",
+    "\n",
+    "for a, b in moves:\n",
+    "    print(a, b)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "57d4f649",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1 3\n",
+      "1 2\n",
+      "3 2\n",
+      "1 3\n",
+      "2 1\n",
+      "2 3\n",
+      "1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t11729\t 하노이 탑 이동 순서\n",
+    "\n",
+    "sys.stdin = StringIO('''3''')\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "write = sys.stdout.write\n",
+    "\n",
+    "n = int(input())\n",
+    "write(str(2**n - 1) + \"\\n\")\n",
+    "\n",
+    "def hanoi(k, start, middle, end):\n",
+    "    if k == 0:\n",
+    "        return\n",
+    "    hanoi(k - 1, start, end, middle)\n",
+    "    write(f\"{start} {end}\\n\")\n",
+    "    hanoi(k - 1, middle, start, end)\n",
+    "\n",
+    "hanoi(n, 1, 2, 3)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
