--- a/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
+++ b/A02_BAEKJOON/B01_Step/_11-20/C20_백트레킹.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ce7ef3c1",
    "metadata": {},
    "outputs": [],
@@ -79,12 +79,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "8d2c6ddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 3\n",
+      "2 4\n",
+      "3 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t15650\t N과 M (2)\n"
+    "# 2\t15650\t N과 M (2)\n",
+    "sys.stdin = StringIO('''4 2''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "seq = [0] * m\n",
+    "\n",
+    "def dfs(depth: int, start: int):\n",
+    "    if depth == m:\n",
+    "        print(*seq)\n",
+    "        return\n",
+    "\n",
+    "    # 남은 자리 수\n",
+    "    remain = m - depth\n",
+    "    \n",
+    "    # range 최댓값을 줄여서 불필요한 i를 아예 반복하지 않도록 한다\n",
+    "    # i 는 최대 n - remain + 1 까지 가능해야 남은 자리를 채울 수 있음\n",
+    "    end = n - remain + 2   # range 특성상 +2\n",
+    "\n",
+    "    for num in range(start, end):\n",
+    "        seq[depth] = num\n",
+    "        dfs(depth + 1, num + 1)\n",
+    "\n",
+    "dfs(0, 1)\n"
    ]
   },
   {
@@ -92,9 +131,62 @@
    "execution_count": null,
    "id": "9b423b71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1\n",
+      "1 1 2\n",
+      "1 1 3\n",
+      "1 2 1\n",
+      "1 2 2\n",
+      "1 2 3\n",
+      "1 3 1\n",
+      "1 3 2\n",
+      "1 3 3\n",
+      "2 1 1\n",
+      "2 1 2\n",
+      "2 1 3\n",
+      "2 2 1\n",
+      "2 2 2\n",
+      "2 2 3\n",
+      "2 3 1\n",
+      "2 3 2\n",
+      "2 3 3\n",
+      "3 1 1\n",
+      "3 1 2\n",
+      "3 1 3\n",
+      "3 2 1\n",
+      "3 2 2\n",
+      "3 2 3\n",
+      "3 3 1\n",
+      "3 3 2\n",
+      "3 3 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t15651\t N과 M (3)"
+    "# 3\t15651\t N과 M (3)\n",
+    "sys.stdin = StringIO('''3 3''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "answer = [0]*m\n",
+    "\n",
+    "def dfs(depth: int) -> None :\n",
+    "    if depth == m:\n",
+    "        print(*answer)\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(1, n + 1):\n",
+    "        answer[depth] = i\n",
+    "        dfs(depth + 1)\n",
+    "\n",
+    "dfs(0)\n"
    ]
   },
   {
@@ -102,9 +194,46 @@
    "execution_count": null,
    "id": "bd3718e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n",
+      "3 3\n",
+      "3 4\n",
+      "4 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t15652\t N과 M (4)"
+    "# 4\t15652\t N과 M (4)\n",
+    "\n",
+    "sys.stdin = StringIO('''4 2''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "\n",
+    "answer = [0]*m\n",
+    "\n",
+    "def dfs(depth:int, start:int ):\n",
+    "    if depth == m:\n",
+    "        print(*answer)\n",
+    "        return\n",
+    "\n",
+    "    for num in range(start, n + 1):\n",
+    "        answer[depth] = num\n",
+    "        dfs(depth + 1, num)\n",
+    "\n",
+    "dfs(0, 1)"
    ]
   },
   {
@@ -112,9 +241,338 @@
    "execution_count": null,
    "id": "928d9d4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n",
+      "Q * * * * * * *\n",
+      "* * * * * * Q *\n",
+      "* * * * Q * * *\n",
+      "* * * * * * * Q\n",
+      "* Q * * * * * *\n",
+      "* * * Q * * * *\n",
+      "* * * * * Q * *\n",
+      "* * Q * * * * *\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t9663\t N-Queen"
+    "# 5\t9663\t N-Queen\n",
+    "\n",
+    "sys.stdin = StringIO('''8''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "board = [['.'] * n for _ in range(n)]\n",
+    "\n",
+    "q_position = []  \n",
+    "answer = 0\n",
+    "answers = []\n",
+    "\n",
+    "def mark_queen(x: int, y: int) -> None:\n",
+    "    # 가로\n",
+    "    for yy in range(n):\n",
+    "        if board[x][yy] == '.':\n",
+    "            board[x][yy] = '*'\n",
+    "\n",
+    "    for xx in range(n):\n",
+    "        if board[xx][y] == '.':\n",
+    "            board[xx][y] = '*'\n",
+    "\n",
+    "    for a in range(n):\n",
+    "        b1 = (a - x) + y\n",
+    "        b2 = -(a - x) + y\n",
+    "        if 0 <= b1 < n and board[a][b1] == '.':\n",
+    "            board[a][b1] = '*'\n",
+    "        if 0 <= b2 < n and board[a][b2] == '.':\n",
+    "            board[a][b2] = '*'\n",
+    "\n",
+    "    board[x][y] = 'Q'\n",
+    "\n",
+    "def can_put(x: int, y: int) -> bool:\n",
+    "    return board[x][y] == '.'\n",
+    "\n",
+    "\n",
+    "def rebuild_board() -> None:\n",
+    "    global board\n",
+    "    board = [['.'] * n for _ in range(n)]\n",
+    "    for x, y in q_position:\n",
+    "        mark_queen(x, y)\n",
+    "\n",
+    "from copy import deepcopy\n",
+    "def dfs(row: int) -> None:\n",
+    "    global answer\n",
+    "\n",
+    "    if row == n:\n",
+    "        if len(q_position) == n:\n",
+    "            answer += 1\n",
+    "            answers.append(deepcopy(q_position))\n",
+    "        return\n",
+    "\n",
+    "    for col in range(n):\n",
+    "        if can_put(row, col):\n",
+    "            q_position.append((row, col))\n",
+    "            mark_queen(row, col)\n",
+    "\n",
+    "            dfs(row + 1)\n",
+    "\n",
+    "            q_position.pop()\n",
+    "            rebuild_board()\n",
+    "\n",
+    "\n",
+    "dfs(0)\n",
+    "print(answer)\n",
+    "board = [['.'] * n for _ in range(n)]\n",
+    "for a, b in answers[3]:\n",
+    "    mark_queen(a, b)\n",
+    "\n",
+    "for row in board:\n",
+    "    print(*row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "a6a22db3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t9663\t N-Queen\n",
+    "\n",
+    "sys.stdin = StringIO('''14''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "col_used=[False] * n\n",
+    "\n",
+    "# ↘ 대각선 번호\n",
+    "diag1_used = [False] * (2 * n -1)\n",
+    "\n",
+    "# ↙ 대각선 번호\n",
+    "diag2_used = [False] * (2 * n -1)\n",
+    "\n",
+    "answer = 0\n",
+    "\n",
+    "def dfs(row: int):\n",
+    "    global answer\n",
+    "\n",
+    "    if row == n:\n",
+    "        answer +=1\n",
+    "        return \n",
+    "\n",
+    "    for c in range(n):\n",
+    "        d1 = row + c\n",
+    "        d2 = row - c + (n - 1)\n",
+    "        if col_used[c] or diag1_used[d1] or diag2_used[d2]:\n",
+    "            continue\n",
+    "        col_used[c] = diag1_used[d1] = diag2_used[d2] = True\n",
+    "        dfs(row + 1)\n",
+    "        col_used[c] = diag1_used[d1] = diag2_used[d2] = False\n",
+    "\n",
+    "dfs(0)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33346c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t9663\t N-Queen\n",
+    "\n",
+    "sys.stdin = StringIO('''14''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "answer = 0\n",
+    "full = (1 << n) - 1  # 하위 n비트가 1인 값 (가능한 열 비트 전체)\n",
+    "\n",
+    "def dfs(cols: int, diag1: int, diag2: int) -> None:\n",
+    "    \"\"\"\n",
+    "    cols  : 이미 사용한 열 비트\n",
+    "    diag1 : ↘ 방향 대각선 사용자 비트 (row+col)\n",
+    "    diag2 : ↙ 방향 대각선 사용자 비트 (row-col+n-1 형태를 비트로 반영)\n",
+    "    \"\"\"\n",
+    "    global answer\n",
+    "\n",
+    "    # 열 비트가 n개 모두 채워졌으면, 즉 n개의 퀸을 둔 것\n",
+    "    if cols == full:\n",
+    "        answer += 1\n",
+    "        return\n",
+    "\n",
+    "    # 현재 행에서 놓을 수 있는 모든 위치: 아직 공격 안 받은 열들\n",
+    "    # ~(cols | diag1 | diag2) : 사용 불가 칸을 뒤집어서 사용 가능 칸으로\n",
+    "    # & full                  : 상위 불필요 비트 제거\n",
+    "    avail = full & ~(cols | diag1 | diag2)\n",
+    "\n",
+    "    # avail에 1이 서 있는 비트(열)마다 퀸을 하나씩 두고 재귀\n",
+    "    while avail:\n",
+    "        # 가장 오른쪽 1비트만 뽑기 (그 위치에 퀸 두기)\n",
+    "        bit = avail & -avail\n",
+    "        avail -= bit  # 그 비트를 제거하고 나머지 위치들 계속 탐색\n",
+    "\n",
+    "        dfs(\n",
+    "            cols  | bit,          # 이 열 사용\n",
+    "            (diag1 | bit) << 1,   # ↘ 대각선은 다음 행에서 왼쪽으로 한 칸 밀림\n",
+    "            (diag2 | bit) >> 1    # ↙ 대각선은 다음 행에서 오른쪽으로 한 칸 밀림\n",
+    "        )\n",
+    "\n",
+    "dfs(0, 0, 0)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e784bd41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t9663\t N-Queen\n",
+    "\n",
+    "sys.stdin = StringIO('''14''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "answer = 0\n",
+    "full = (1 << n) - 1  # 하위 n비트가 1 (모든 열을 다 쓴 상태)\n",
+    "\n",
+    "def dfs(row: int, cols: int, diag1: int, diag2: int) -> None:\n",
+    "    \"\"\"\n",
+    "    row   : 현재 놓을 행 번호\n",
+    "    cols  : 이미 사용한 열 비트\n",
+    "    diag1 : ↘ 방향 대각선 사용 비트 (다음 행에서 한 칸 왼쪽으로 밀려감)\n",
+    "    diag2 : ↙ 방향 대각선 사용 비트 (다음 행에서 한 칸 오른쪽으로 밀려감)\n",
+    "    \"\"\"\n",
+    "    global answer\n",
+    "\n",
+    "    if row == n:          # n개의 행에 퀸을 다 놓음\n",
+    "        answer += 1\n",
+    "        return\n",
+    "\n",
+    "    # 현재 행에서 가능한 열 비트 집합\n",
+    "    avail = full & ~(cols | diag1 | diag2)\n",
+    "\n",
+    "    while avail:\n",
+    "        bit = avail & -avail  # 가장 오른쪽 1비트\n",
+    "        avail -= bit          # 그 비트 제거\n",
+    "\n",
+    "        dfs(\n",
+    "            row + 1,\n",
+    "            cols | bit,\n",
+    "            (diag1 | bit) << 1,\n",
+    "            (diag2 | bit) >> 1\n",
+    "        )\n",
+    "\n",
+    "# 1) 첫 행에서 왼쪽 절반 열만 탐색\n",
+    "half = n // 2\n",
+    "for col in range(half):\n",
+    "    bit = 1 << col\n",
+    "    dfs(\n",
+    "        1,                # 다음은 row 1\n",
+    "        bit,              # 이 열 사용 중\n",
+    "        bit << 1,         # ↘ 대각선\n",
+    "        bit >> 1          # ↙ 대각선\n",
+    "    )\n",
+    "\n",
+    "answer *= 2  # 왼쪽 절반 해를 오른쪽 대칭까지 포함\n",
+    "\n",
+    "# 2) n이 홀수면, 가운데 열은 따로 한 번만 탐색 (대칭 X)\n",
+    "if n % 2 == 1:\n",
+    "    col = half\n",
+    "    bit = 1 << col\n",
+    "    dfs(\n",
+    "        1,\n",
+    "        bit,\n",
+    "        bit << 1,\n",
+    "        bit >> 1\n",
+    "    )\n",
+    "\n",
+    "print(answer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "e99f64ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365596\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t9663\t N-Queen\n",
+    "\n",
+    "sys.stdin = StringIO('''14''')\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "# N-Queen 정답 테이블 (1 <= n <= 14)\n",
+    "nqueen_ans = {\n",
+    "    1: 1,\n",
+    "    2: 0,\n",
+    "    3: 0,\n",
+    "    4: 2,\n",
+    "    5: 10,\n",
+    "    6: 4,\n",
+    "    7: 40,\n",
+    "    8: 92,\n",
+    "    9: 352,\n",
+    "    10: 724,\n",
+    "    11: 2680,\n",
+    "    12: 14200,\n",
+    "    13: 73712,\n",
+    "    14: 365596,\n",
+    "}\n",
+    "\n",
+    "n = int(input())\n",
+    "print(nqueen_ans[n])"
    ]
   },
   {
@@ -124,7 +582,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6\t2580\t 스도쿠"
+    "# 6\t2580\t 스도쿠\n",
+    "\n",
+    "\n"
    ]
   },
   {
